<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_last_name"
        android:textSize="17sp"
        android:textColor="@android:color/holo_green_dark"
        android:labelFor="@id/lastName"/>

    <EditText
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_underline"
        android:inputType="textPersonName"
        android:autofillHints="name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_first_name"
        android:textSize="17sp"
        android:textColor="@android:color/holo_green_dark"
        android:labelFor="@id/firstName"/>

    <EditText
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_underline"
        android:inputType="textPersonName"
        android:autofillHints="username"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_city"
        android:textSize="17sp"
        android:textColor="@android:color/holo_green_dark"
        android:layout_marginTop="10dp"/>

    <Spinner
        android:id="@+id/citySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/cities"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_gender"
        android:textSize="17sp"
        android:textColor="@android:color/holo_green_dark"
        android:layout_marginTop="10dp"/>

    <RadioGroup
        android:id="@+id/genderGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/maleRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_male"/>

        <RadioButton
            android:id="@+id/femaleRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_female"
            android:layout_marginStart="40dp"/>
    </RadioGroup>

    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_add"
        android:layout_marginTop="10dp"
        android:background="#D9D9D9"
        android:textColor="#000000"/>
</LinearLayout>